# gdm

./: .gitignore  CMakeLists.txt  README.md  config.h  gdm_scheme.drawio  help.txt  notes.txt
.gdm/: log.txt
components/comp_struct/: comp_struct.cpp  comp_struct.hpp
components/component/: component.cpp  component.hpp
components/gdm_file/: gdm_file.cpp  gdm_file.hpp
components/git_rri/: git_rri.cpp  git_rri.hpp
components/repo_addr_internet/: repo_addr_internet.cpp  repo_addr_internet.hpp
components/repo_addr_project/: repo_addr_project.cpp  repo_addr_project.hpp
components/repo_branch/: repo_branch.cpp  repo_branch.hpp
components/repo_branch_type/: repo_branch_type.cpp  repo_branch_type.hpp
components/repo_hints/: repo_hints.cpp  repo_hints.hpp
interfaces/rri/: rri.hpp
main/: help.cpp  main.cpp  main.hpp
temp/: project.gdm
